--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^25.2.1",
+    "@types/node": "^25.2.2",
+    "dotenv": "^17.2.4",
     "prisma": "^7.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
-  },
-  "dependencies": {
-    "dotenv": "^17.2.4"
   }
 }
